--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="contactContainer"></div>
     </div>
 
-    <a href="homepage.html" class="arrow">&lt;</a>
+    <a href="index.html" class="arrow">&lt;</a>
 
     <script src="about.js"></script>
 </body>
