--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         <div class="categories"></div>
     </div>
 
-    <a href="homepage.html" class="arrow">&lt;</a>
+    <a href="index.html" class="arrow">&lt;</a>
 
     <script src="projects.js"></script>
 </body>
