--- a/Sp1.html
+++ b/Sp1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="projectIntro.css">
+    <link rel="stylesheet" href="Sp1.css">
 
     <title>Elena Han</title>
 </head>
